--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 										<h2><a href="https://public.tableau.com/app/profile/gabriel.garcia2133/viz/COVIDDashboard_17077817192420/Dashboard1">Tableau Project<br />
 									</header>
 									<a href="https://public.tableau.com/app/profile/gabriel.garcia2133/viz/COVIDDashboard_17077817192420/Dashboard1" class="image fit"><img src="images/Tableau.jpeg" alt="" /></a>
-									<p>Created meaningful visualizations using Tableau of the impact experienced worldwide by the COVID-19
-										<li><a href="https://public.tableau.com/app/profile/gabriel.garcia2133/viz/COVIDDashboard_17077817192420/Dashboard1" class="button">View Project</a></li>
+									<p>Created meaningful visualizations and dashboards using Tableau
+										<li><a href="https://public.tableau.com/app/profile/gabriel.garcia2133/vizzes" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/Ggarcia01321/PowerBI/blob/main/Data%20Professional%20Survey%20Breakdown.pdf">Data Profressional Survey<br/>
+										<h2><a href="https://github.com/Ggarcia01321/PowerBI/blob/main/Data%20Professional%20Survey%20Breakdown.pdf">Data Professional Survey<br/>
 									</header>
 									<a href="https://github.com/Ggarcia01321/PowerBI/blob/main/Data%20Professional%20Survey%20Breakdown.pdf" class="image fit"><img src="images/PowerBI.jpeg" alt="" /></a>
 									<p>Transformed and processed survey data to create visualizations from the responses of 630 Data Professionals</p>
