--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Gabriel Garcia<br/>
 						Analyst Portfolio</h1>
-						<p>Aspiring Data Analyst with skills in SQL, Power BI, Tableu, Microsoft Excel, and Python 
+						<p>Analyst with skills in SQL, Power BI, Tableu, Microsoft Excel, and Python 
 			
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -77,13 +77,13 @@
 										<h2><a href="https://public.tableau.com/app/profile/gabriel.garcia2133/viz/COVIDDashboard_17077817192420/Dashboard1">Tableau Project<br />
 									</header>
 									<a href="https://public.tableau.com/app/profile/gabriel.garcia2133/viz/COVIDDashboard_17077817192420/Dashboard1" class="image fit"><img src="images/Tableau.jpeg" alt="" /></a>
-									<p>Created meaningful visualizations and dashboards using Tableau
+									<p>Created meaningful visualizations and dashboards using Tableau 
 										<li><a href="https://public.tableau.com/app/profile/gabriel.garcia2133/vizzes" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/Ggarcia01321/PowerBI/blob/main/Data%20Professional%20Survey%20Breakdown.pdf">Data Professional Survey<br/>
+										<h2><a href="https://github.com/Ggarcia01321/PowerBI/blob/main/Data%20Professional%20Survey%20Breakdown.pdf">Data Profressional Survey<br/>
 									</header>
 									<a href="https://github.com/Ggarcia01321/PowerBI/blob/main/Data%20Professional%20Survey%20Breakdown.pdf" class="image fit"><img src="images/PowerBI.jpeg" alt="" /></a>
 									<p>Transformed and processed survey data to create visualizations from the responses of 630 Data Professionals</p>
@@ -92,6 +92,16 @@
 									</ul>
 								</article>
 								<article>
+									<article>
+										<header>
+											<h2><a href="https://github.com/Ggarcia01321/PowerBI/blob/main/Data%20Professional%20Survey%20Breakdown.pdf">US Debt Tracker Project<br/>
+										</header>
+										<a href="https://github.com/Ggarcia01321/Excel-Projects-/blob/main/US%20Debt%20Tracker%20Project.pdf" class="image fit"><img src="images/Excel Logo.jpeg" alt="" /></a>
+										<p>Excel scenario project that asks analysis-based questions based on the US Government's public and governmental debt</p>
+										<ul class="actions special">
+											<li><a href="https://github.com/Ggarcia01321/Excel-Projects-/blob/main/US%20Debt%20Tracker%20Project.pdf" class="button">View Project</a></li>
+										</ul>
+									</article>
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
