--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Gabriel Garcia<br/>
 						Analyst Portfolio</h1>
-						<p>Analyst with skills in SQL, Power BI, Tableu, Microsoft Excel, and Python 
+						<p>Analyst with skills in SQL, Power BI, Tableau, Microsoft Excel, and Python 
 			
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -74,9 +74,9 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/gabriel.garcia2133/viz/COVIDDashboard_17077817192420/Dashboard1">Tableau Project<br />
+										<h2><a href="https://public.tableau.com/app/profile/gabriel.garcia2133/vizzes">Tableau Project<br />
 									</header>
-									<a href="https://public.tableau.com/app/profile/gabriel.garcia2133/viz/COVIDDashboard_17077817192420/Dashboard1" class="image fit"><img src="images/Tableau.jpeg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/gabriel.garcia2133/vizzes" class="image fit"><img src="images/Tableau.jpeg" alt="" /></a>
 									<p>Created meaningful visualizations and dashboards using Tableau 
 										<li><a href="https://public.tableau.com/app/profile/gabriel.garcia2133/vizzes" class="button">View Project</a></li>
 									</ul>
